master


0.6.0

  * 0.5.0 broken process; not pointing to new out directory
  * Consistency with directory names javascripts -> js, stylesheets -> css
  * Update to Statica 0.2.0

0.5.0

  * Move output files to {asset_dir}/out/{type}

0.4.2
  * Use Rack::StaticaServer

0.4.1
  * Only monitor source directories
  * Use Statica diges urls for assets

0.4.0

  * Extract page tag creation from asset processing
  * Replace crappy before filter process in dev/test mode with fssm

0.3.0

  * Include YUICompressor processing of stylesheets and javascripts
  * Update to r18n-desktop 0.4.13 to address require issue
  * Update disclaimer so it doesn't include the full path.
  * Move processing of assets to before filter in dev and test mode

0.2.3

  * Remove asset_id functionality. Dead code causing bugs.

0.2.2

  * Asset compilation fix

0.2.1

  * page_head_tags and page_body_tags implemented

0.2.0

  * Ability to add external references
  * Ability to add media query requirement to styles

0.1.0

  * Initial release